// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignStatus viewerCanAdminister: false campaign errored 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <div
        className="alert alert-danger my-4"
      >
        <h3
          className="alert-heading mb-0"
        >
          Creating changesets failed
        </h3>
        <ul
          className="mt-2"
        >
          <li
            className="mb-2"
          >
            <code>
              <ErrorMessage
                error="a"
              />
            </code>
          </li>
          <li
            className="mb-2"
          >
            <code>
              <ErrorMessage
                error="b"
              />
            </code>
          </li>
        </ul>
      </div>
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false campaign processing 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <div
        className="alert alert-info mt-4"
      >
        <p>
          <Memo(SyncIcon)
            className="icon-inline"
          />
           Creating 
          6
           
          changesets
           on code hosts...
        </p>
        <div
          className="progress mt-2 mb-1"
        >
          <div
            className="progress-bar"
            style={
              Object {
                "width": "50%",
              }
            }
          >
             
          </div>
        </div>
      </div>
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false closed campaign 1`] = `
<React.Fragment>
  <div>
    <div
      className="alert alert-secondary mt-2"
    >
      Campaign is closed. No changes can be made to this campaign anymore.
    </div>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false drafted campaign 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex align-items-center alert alert-warning my-4"
    >
      <p
        className="mb-0 ml-2"
      >
        Campaign is a draft.
         
        No changesets have
         
        been created on code hosts yet.
      </p>
    </div>
  </React.Fragment>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false drafted campaign, some published 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex align-items-center alert alert-warning my-4"
    >
      <p
        className="mb-0 ml-2"
      >
        Campaign is a draft.
         
        Only a subset of changesets has
         
        been created on code hosts yet.
      </p>
    </div>
  </React.Fragment>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true campaign errored 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <div
        className="alert alert-danger my-4"
      >
        <h3
          className="alert-heading mb-0"
        >
          Creating changesets failed
        </h3>
        <ul
          className="mt-2"
        >
          <li
            className="mb-2"
          >
            <code>
              <ErrorMessage
                error="a"
              />
            </code>
          </li>
          <li
            className="mb-2"
          >
            <code>
              <ErrorMessage
                error="b"
              />
            </code>
          </li>
        </ul>
        <button
          className="btn btn-primary mb-0"
          onClick={[Function]}
          type="button"
        >
          Retry
        </button>
      </div>
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true campaign processing 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <div
        className="alert alert-info mt-4"
      >
        <p>
          <Memo(SyncIcon)
            className="icon-inline"
          />
           Creating 
          6
           
          changesets
           on code hosts...
        </p>
        <div
          className="progress mt-2 mb-1"
        >
          <div
            className="progress-bar"
            style={
              Object {
                "width": "50%",
              }
            }
          >
             
          </div>
        </div>
      </div>
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true closed campaign 1`] = `
<React.Fragment>
  <div>
    <div
      className="alert alert-secondary mt-2"
    >
      Campaign is closed. No changes can be made to this campaign anymore.
    </div>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true drafted campaign 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex align-items-center alert alert-warning my-4"
    >
      <button
        className="btn btn-primary mb-0"
        onClick={[Function]}
        type="button"
      >
        Publish campaign
      </button>
      <p
        className="mb-0 ml-2"
      >
        Campaign is a draft.
         
        No changesets have
         
        been created on code hosts yet.
      </p>
    </div>
  </React.Fragment>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true drafted campaign, some published 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex align-items-center alert alert-warning my-4"
    >
      <button
        className="btn btn-primary mb-0"
        onClick={[Function]}
        type="button"
      >
        Publish campaign
      </button>
      <p
        className="mb-0 ml-2"
      >
        Campaign is a draft.
         
        Only a subset of changesets has
         
        been created on code hosts yet.
      </p>
    </div>
  </React.Fragment>
</React.Fragment>
`;
